# MCP-server-fastapi-containerapp

./: .gitignore  README.md  api_key_auth.py  client-sse-agents-foundry.py  client-sse-agents-openai.py  client-sse-agents.py  client-sse-azure-agent.py  client-sse-llm.py  client-sse.py  llm.py  main.py  pyproject.toml  sample-agent.py  sample.env  sample.json  server.py  sports.py  weather.py
clients/: README.md  client-http-autogen.py  client-http-openai-agent.py  client-http-openai-hosted.py  client-http-openai.py  client-http-responses.py  client-http-sk.py  client-http-test.py  client-http.py  client-sse-agents-autogen.py  client-sse-agents-openai.py  client-sse-sk-agent.py  client-sse.py  requirements.txt  sample.env
clients/workspace/: fetch_nhl_news.py  fetch_nhl_news_rss.py  nhl_news_entries.txt
my-files/: baseball.md  sports.md  test.csv
prompts/: news.md
server/: Dockerfile  README.md  api_key_auth.py  deploy_server_aca_ssh.sh  requirements.txt  sample.env  sports_mcp_server.py  sports_news_server.py  start_server.py  start_server_http.py
server/prompts/: news.md
