[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp==1.9.0",
    "fastapi[standard]>=0.115.12",
    "openai==1.75.0",
    "python-dotenv",
    "ipykernel",
    "httpx",
    "starlette",
    "uvicorn[standard]",
    "requests",
    "openai-agents",
    "azure-ai-projects==1.0.0b7",
    "azure-ai-agents",
    "azure-identity==1.21.0",
    "aiohttp",
]
