[project]
name = "mcp-server-streamable-http"
version = "0.1.0"
description = "A project that explores MCP servers and clients"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "mcp[cli]==1.9.3",
    "openai",
    "openai-agents==0.0.16",
    "azure-ai-projects==1.0.0b7",
    "azure-identity==1.21.0",
    "azure-ai-agents",
    "aiohttp",
    "semantic-kernel",
    "backoff>=2.2.1",
    "halo>=0.0.31",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.4",
]
